revise head description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="U3A Membership and Course Administration software" />
+    <meta name="description" content="Free U3A Membership and Course Administration software" />
     <meta name="keywords"
-        content="U3A software,U3A Administration,U3A member portal,U3A membership,U3A enrolment,U3A attendance,U3A course,U3A class">
+        content="U3A software,Free U3A software,U3A Administration,U3A member portal,U3A membership,U3A enrolment,U3A attendance,U3A course,U3A class">
     <meta name="author" content="Michael Hanlon" />
     <meta name='robots' content='max-image-preview:large' />
     
