Added 2FA details

--- a/u3a-software-introduction.html
+++ b/u3a-software-introduction.html
@@ -279,6 +279,10 @@
                     We keep your data safe in Australian-based, Microsoft Azure databases
                     and provide access to that data using industry-standard role-based authoristaion policies.
                 </p>
+                <p>
+                    We promote industry best practice for security and privacy, including
+                    mandatory two-factor authentication (2FA) for all administrative users and, optional 2FA for Member Portal users.
+                </p>
 
 
             </div>
