--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="index.html">
                 <img src="./favicon/android-chrome-512x512.png" alt="Home" height="32">
                 U3Admin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
@@ -48,8 +48,22 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="/"><span class="bi-house">&nbsp; Home</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><span class="bi-house">&nbsp; Home</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Products
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="u3a-administration-software.html">Administration Website</a></li>
+                          <li><a class="dropdown-item" href="u3a-member-portal.html">Member Portal</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="gallery.html">Image Gallery</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#users">Clients</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -173,7 +187,7 @@
                                                 for one of our U3A groups...
                                             </p>
                                             <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                                                    src="../assets/img/reliable-email.png" alt="Reliable email">
+                                                    src="assets/img/reliable-email.png" alt="Reliable email">
                                             </div>
                                             </p>
                                         </li>
@@ -215,7 +229,7 @@
                                     </p>
                                     <p>
                                     <div class="border border-5 rounded col-lg-10 mx-auto"><img class="img-fluid"
-                                            src="../assets/img/help-example.png" alt="help example"></div>
+                                            src="assets/img/help-example.png" alt="help example"></div>
                                     </p>
                                     <p>
                                         The second source of help will be one or more knowledgeable members within your
