refactor: update 'not who you're looking for' section layout and styling

--- a/index.html
+++ b/index.html
@@ -266,37 +266,6 @@
                 </div>
             </div>
 
-            <!-- Not who you're looking for section -->
-            <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
-                <div class="col-lg-8 col-xl-6">
-                    <div class="card border-0 bg-light">
-                        <div class="card-body text-center p-4">
-                            <h5 class="card-title text-muted mb-3">
-                                <i class="bi-info-circle text-primary"></i> Looking for a different U3A software provider?
-                            </h5>
-                            <p class="card-text text-muted small mb-3">
-                                We're <strong>U3Admin</strong>, but there are other great U3A software providers in Australia. 
-                                If your U3A uses one of these systems, please contact them directly:
-                            </p>
-                            <div class="d-flex flex-column flex-sm-row justify-content-center gap-2">
-                                <a href="http://myu3a.net/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
-                                    <i class="bi-box-arrow-up-right"></i> MyU3A
-                                </a>
-                                <a href="https://memberwizard.com.au/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
-                                    <i class="bi-box-arrow-up-right"></i> MemberWizard
-                                </a>
-                                <a href="https://www.membershipadmin.com.au/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
-                                    <i class="bi-box-arrow-up-right"></i> MembershipAdmin
-                                </a>
-                            </div>
-                            <p class="card-text text-muted small mt-3 mb-0">
-                                <em>Not sure which system your U3A uses? Check with your U3A committee or membership officer.</em>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                 <div class="col-lg-6">
                     <form id="contactForm" name="contactForm">
@@ -335,6 +304,36 @@
                             </button>
                         </div>
                     </form>
+                </div>
+            </div>
+            <!-- Not who you're looking for section -->
+            <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                <div class="col-lg-10">
+                    <div class="card border-0 bg-light">
+                        <div class="card-body text-center p-4">
+                            <h5 class="card-title text-muted mb-3">
+                                <i class="bi-info-circle text-primary"></i> Looking for a different U3A software provider?
+                            </h5>
+                            <p class="card-text text-muted small mb-3">
+                                We're <strong>U3Admin</strong>, but there are other great U3A software providers in Australia. 
+                                If your U3A uses one of these systems, please contact them directly:
+                            </p>
+                            <div class="d-flex flex-column flex-sm-row justify-content-center gap-2">
+                                <a href="http://myu3a.net/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
+                                    <i class="bi-box-arrow-up-right"></i> MyU3A
+                                </a>
+                                <a href="https://memberwizard.com.au/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
+                                    <i class="bi-box-arrow-up-right"></i> MemberWizard
+                                </a>
+                                <a href="https://www.membershipadmin.com.au/" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm">
+                                    <i class="bi-box-arrow-up-right"></i> MembershipAdmin
+                                </a>
+                            </div>
+                            <p class="card-text text-muted small mt-3 mb-0">
+                                <em>Not sure which system your U3A uses? Check with your U3A committee or membership officer.</em>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
