--- a/index.html
+++ b/index.html
@@ -260,9 +260,8 @@
                 <div class="col-lg-8 col-xl-6 text-center">
                     <h2 class="mt-0">Let's Get In Touch!</h2>
                     <hr class="divider" />
-                    <p class="text-muted mb-5">Ready to take the next step? Complete the contact form and we will get
-                        back
-                        to you as soon as possible!</p>
+                    <p class="text-muted mb-5">Interseted in using <b>U3Admin</b> software to manage membership administration in  your U3A? Complete the contact form and we will get
+                        back to you as soon as possible!</p>
                 </div>
             </div>
 
