fix: adjust gallery section styling for improved layout

--- a/gallery.html
+++ b/gallery.html
@@ -77,9 +77,9 @@
     </section>
 
     <!-- Gallery Section -->
-    <section class="page-section bg-white">
+    <section class="page-section-xs bg-white">
         <div class="container px-4 px-lg-5">
-            <div class="row mb-5">
+            <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="text-muted">Click any image to view it larger. Use arrow keys or swipe to navigate between images.</p>
                     <a class="btn btn-primary mt-2" href="https://demo.u3admin.org.au/" target="_blank">
