fix: remove outdated features and clarify course leader assignment in features list

--- a/features.html
+++ b/features.html
@@ -209,7 +209,6 @@
                                         <li>Financial membership records</li>
                                         <li>Member communication preferences</li>
                                         <li>Emergency contact management</li>
-                                        <li>Customizable member fields</li>
                                         <li>Member import/export capabilities</li>
                                     </ul>
                                 </div>
@@ -232,7 +231,7 @@
                                         <li>Automatic waitlist management</li>
                                         <li>Class capacity controls</li>
                                         <li>Multi-term course planning</li>
-                                        <li>Course leader assignment</li>
+                                        <li>Course leader &amp; Clerk assignment</li>
                                         <li>Venue management</li>
                                         <li>Member self-service enrolment</li>
                                     </ul>
@@ -276,7 +275,6 @@
                                         <li>Cash/cheque payment recording</li>
                                         <li>Automatic receipt generation and emailing</li>
                                         <li>Financial reports and summaries</li>
-                                        <li>GST tracking (if applicable)</li>
                                         <li>Payment history</li>
                                     </ul>
                                 </div>
@@ -343,7 +341,7 @@
                                         <li>Secure authentication</li>
                                         <li>Two-factor authentication support</li>
                                         <li>Audit logging</li>
-                                        <li>Privacy compliance (GDPR, Privacy Act)</li>
+                                        <li>Privacy compliance</li>
                                         <li>Regular security updates</li>
                                     </ul>
                                 </div>
