fix: update demo links to use data attributes for dynamic URL handling

--- a/faq.html
+++ b/faq.html
@@ -219,7 +219,7 @@
                                     <p>
                                         The first source of assistance is our online help system.
                                         You can view it by <a
-                                            href="https://demo.u3admin.org.au/help/index.html">clicking here</a>.
+                                            href="#" data-demo-link="help/index.html">clicking here</a>.
                                         You may notice the lack of images in the help documentation. That's because it
                                         is
                                         designed to be <em>context-sensitive</em> meaning the help displayed is
