--- a/features.html
+++ b/features.html
@@ -92,7 +92,7 @@
                             <h2 class="mb-4">Why U3Admin?</h2>
                             <p class="text-muted">U3Admin is a comprehensive, cloud-based solution designed specifically for University of the Third Age organizations. Built from the ground up with input from U3A administrators and members, our software streamlines every aspect of U3A management.</p>
                             <p class="text-muted">Whether you're managing 50 members or 5,000, U3Admin scales with your needs while remaining intuitive and easy to use.</p>
-                            <a class="btn btn-primary mt-3" href="https://demo.u3admin.org.au/" target="_blank">
+                            <a class="btn btn-primary mt-3" href="#" data-demo-link="" target="_blank">
                                 <i class="bi-car-front"></i> Try Live Demo
                             </a>
                         </div>
@@ -376,7 +376,7 @@
             <h2 class="mb-4">Ready to Transform Your U3A Management?</h2>
             <p class="text-white-75 mb-5">Join our growing community of satisfied U3A organizations</p>
             <div class="d-flex flex-column flex-sm-row justify-content-center gap-3">
-                <a class="btn btn-light btn-lg" href="https://demo.u3admin.org.au/" target="_blank">
+                <a class="btn btn-light btn-lg" href="#" data-demo-link="" target="_blank">
                     <i class="bi-car-front"></i> Try Live Demo
                 </a>
                 <a class="btn btn-outline-light btn-lg" href="index.html#contact">
@@ -410,7 +410,7 @@
                 <div class="col-lg-4">
                     <h6>Resources</h6>
                     <ul class="list-unstyled small">
-                        <li><a href="https://demo.u3admin.org.au/" class="text-muted" target="_blank">Live Demo</a></li>
+                        <li><a href="#" data-demo-link="" class="text-muted" target="_blank">Live Demo</a></li>
                         <li><a href="https://github.com/HmichaelG/U3A" class="text-muted" target="_blank">GitHub Repository</a></li>
                         <li><a href="index.html#contact" class="text-muted">Contact</a></li>
                     </ul>
