--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="text-muted">Click any image to view it larger. Use arrow keys or swipe to navigate between images.</p>
-                    <a class="btn btn-primary mt-2" href="https://demo.u3admin.org.au/" target="_blank">
+                    <a class="btn btn-primary mt-2" href="#" data-demo-link="" target="_blank">
                         <i class="bi-car-front"></i> Try Live Demo
                     </a>
                 </div>
@@ -189,7 +189,7 @@
             <h2 class="mb-4">Ready to See More?</h2>
             <p class="text-white-75 mb-4">Experience U3Admin firsthand with our interactive demo</p>
             <div class="d-flex flex-column flex-sm-row justify-content-center gap-3">
-                <a class="btn btn-light btn-lg" href="https://demo.u3admin.org.au/" target="_blank">
+                <a class="btn btn-light btn-lg" href="#" data-demo-link="" target="_blank">
                     <i class="bi-car-front"></i> Try Live Demo
                 </a>
                 <a class="btn btn-outline-light btn-lg" href="index.html#contact">
@@ -220,7 +220,7 @@
                 <div class="col-lg-4">
                     <h6>Resources</h6>
                     <ul class="list-unstyled small">
-                        <li><a href="https://demo.u3admin.org.au/" class="text-muted" target="_blank">Live Demo</a></li>
+                        <li><a href="#" data-demo-link="" class="text-muted" target="_blank">Live Demo</a></li>
                         <li><a href="https://github.com/HmichaelG/U3A" class="text-muted" target="_blank">GitHub Repository</a></li>
                         <li><a href="index.html#contact" class="text-muted">Contact</a></li>
                     </ul>
