fix: add u3admin specific script inclusion to multiple HTML files

--- a/faq.html
+++ b/faq.html
@@ -526,6 +526,8 @@
     <script src="js/scripts.js"></script>
     <!-- Google reCaptcha -->
     <script src="https://www.google.com/recaptcha/api.js"></script>
+    <!-- u3admin specific -->
+    <script src="js/site.js"></script>
 </body>
 
 </html>
