fix: update script and stylesheet links to include versioning for cache busting

--- a/u3a-administration-software.html
+++ b/u3a-administration-software.html
@@ -25,7 +25,7 @@
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css?v=0611c3cd" rel="stylesheet" />
     <!-- Google recaptcha -->
     <link rel="preconnect" href="https://www.google.com">
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
@@ -134,11 +134,11 @@
     <!-- SimpleLightbox plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=29521e24"></script>
     <!-- Google reCaptcha -->
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <!-- u3admin specific -->
-    <script src="js/site.js"></script>
+    <script src="js/site.js?v=74f3af18"></script>
 </body>
 
 </html>
